group = 'com.nablarch.framework'
version = '1.4.0'
description = '画面オンライン処理方式を実現する。'

buildscript {
  repositories {
    mavenLocal()
    maven { url "${developLibUrl}" }
    jcenter()
  }
  dependencies {
    classpath "com.nablarch.dev:nablarch-gradle-plugin:${nablarchGradlePluginVersion}"
    classpath "net.saliman:gradle-cobertura-plugin:${coberturaPluginVersion}"
  }
}

apply plugin: 'com.nablarch.dev.nablarch-build'
apply plugin: 'com.nablarch.dev.nablarch-maven-deploy'
apply plugin: 'com.nablarch.dev.nablarch-sonarqube'
apply plugin: 'com.nablarch.dev.nablarch-version'
apply plugin: 'cobertura'

configurations {
  cobertura
}
apply plugin: 'idea'
apply plugin: 'eclipse'

// ビルド時のJavaバージョンを指定
sourceCompatibility=JavaVersion.VERSION_1_6
targetCompatibility=JavaVersion.VERSION_1_6

dependencies {
  compile "com.nablarch.framework:nablarch-core-beans:${nablarchCoreBeansVersion}"
  compile "com.nablarch.framework:nablarch-fw:${nablarchFwVersion}"
  compile "com.nablarch.framework:nablarch-core-validation:${nablarchCoreValidationVersion}"
  compile "com.nablarch.framework:nablarch-core-repository:${nablarchCoreRepositoryVersion}"
  compile "com.nablarch.framework:nablarch-common-encryption:${nablarchCommonEncryptionVersion}"
  provided "com.nablarch.framework:nablarch-core-validation-ee:${nablarchCoreValidationEeVersion}"

  // Servlet/JSP dependencies.
  provided 'javax.servlet:servlet-api:2.5'

  // integration test
  testRuntime "com.nablarch.framework:nablarch-core-jdbc:${nablarchCoreJdbcVersion}"
  testRuntime "com.nablarch.framework:nablarch-common-jdbc:${nablarchCommonJdbcVersion}"

  // testFW
  testCompile "com.nablarch.framework:nablarch-testing:${nablarchTestingVersion}"

  // Cobertura
  testCompile "net.saliman:gradle-cobertura-plugin:${coberturaPluginVersion}"
  cobertura ("net.sourceforge.cobertura:cobertura:1.9.4") {
    exclude group: 'log4j', module: 'log4j'
  }
  cobertura 'log4j:log4j:1.2.17'

  // test api
  testCompile 'org.jmockit:jmockit:1.13'
  testCompile 'junit:junit:4.12'
  testCompile 'org.hamcrest:hamcrest-all:1.3'
  testCompile 'com.nablarch.dev:nablarch-test-support:0.0.7'
  testCompile 'com.oracle:ucp:11.2.0.3.0'
  testCompile 'com.oracle:ojdbc6:11.2.0.2.0'

  // hereis
  testCompile(group: 'com.nablarch.tool', name: 'nablarch-toolbox', version: '1.0.2') {
    exclude group: 'com.nablarch.profile', module: 'nablarch-all-in-one'
    exclude group: 'com.nablarch.framework', module: 'nablarch-testing'
  }

  testRuntime files('src/test/java/')
  testRuntime 'org.hibernate:hibernate-validator:5.2.4.Final'
}

// カバレッジを取るための設定
File nabDir = new File(buildDir, 'nablarch')
File nabClassesDir = new File("${buildDir}/classes/main/")
File nabSourcesDir = new File(nabDir, 'sources')
String coberturaReportFormat = 'xml'

test {
  jvmArgs (
          '-Xms16m',
          '-Xmx32m',
          '-XX:PermSize=32m',
          '-XX:+UseParallelGC',
          '-Dfile.encoding=UTF-8',
          '-XX:-UseSplitVerifier'
  )

  ignoreFailures = true

  doFirst {
    // masterから本テストを実行するとmaster配下にlogディレクトリが作成されてしまったので、プロジェクト名を明記
    def logDir = new File("${projectDir}/src/test/log")
    if (!logDir.exists()) {
      assert logDir.mkdirs()
    }
  }

  exclude '**/*TestBase.class',
          '**/*SqlServer*',
          '**/*Db2*',
          // testが止まってしまうので、一旦excludeします。
          '**/*MessagingSampleTest*'

  //include 'nablarch/core/util/*Test.class'

  beforeTest { descriptor ->
    logger.lifecycle("Running test: " + descriptor)
  }

  cobertura {
    coberturaVersion = '1.9.4.1'
    coverageSourceDirs = ["${projectDir}/src/main/java/"]
    coverageFormats = ['xml']
    coverageDirs = [project.sourceSets.main.output.classesDir]
    auxiliaryClasspath = files('src/main/resources') + configurations.testRuntime.asFileTree
  }
}

def coberturaReportDir = new File(project.buildDir, "cobertura-report")

task generateCoberturaReportByAnt(dependsOn: 'cobertura') {
  def dataFile = "${project.buildDir}/cobertura/cobertura.ser"

  inputs.file file(dataFile)
  outputs.dir coberturaReportDir

  doLast {
    ant {
      taskdef(resource: 'tasks.properties', classpath: configurations.cobertura.asPath + ':' + configurations.testRuntime.asPath)

      'cobertura-report'(
              destdir: coberturaReportDir,
              datafile: dataFile,
              srcdir: "${projectDir}/src/main/java/",
              format: 'xml'
      )
    }
  }
}

task coverage(dependsOn: ['clean', 'generateCoberturaReportByAnt'])

sonarRunner {
  sonarProperties {
    property "sonar.java.coveragePlugin", "cobertura"
    property "sonar.cobertura.reportPath", "${coberturaReportDir}/coverage.xml"
  }
}

tasks.sonarRunner {
  dependsOn = ['coverage']
}

task wrapper(type: Wrapper) {
  gradleVersion = '2.13'
}
